[project]
name = "picoboard"
version = "0.0.1"
authors = [{ name = "Purvish Jajal" }]
description = "A simple tensorboard alternative that works in your terminal."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["tinydb", "loguru"]

[project.optional-dependencies]
lightning = ['lightning']

[project.urls]
Homepage = "https://github.com/pjjajal/picoboard"
Issues = "https://github.com/pjjajal/picoboard/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["picoboard", "picoboard.picologger", "picoboard.extensions", "picoboard.utils"]